# MLOps-template-builder

./: README.md  install_ml.bat  pyproject.toml  requirements.txt  requirements_ml.txt  setup.py  template_builder.py  test_template.py
app/: main.py  template_generator.py
static/css/: style.css
static/js/: main.js
templates/: cookiecutter.json  index.html
templates/.github/workflows/: ci.yml
templates/docker/: Dockerfile
templates/project_template/{{cookiecutter.project_name}}/: cookiecutter.json  requirements.txt
templates/project_template/{{cookiecutter.project_name}}/src/: train.py
templates/project_template/{{cookiecutter.project_name}}/tests/: test_train.py
templates/src/: train.py
templates/template/: README.md  cookiecutter.json
templates/template/template/{{cookiecutter.project_name}}/: README.md
templates/template/{{cookiecutter.project_name}}/: .gitignore  README.md
